--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -15,3 +15,7 @@
 .footer-link a {
     font-size: .9rem !important;
 }
+.del-btn {
+    background-color: rgb(201, 0, 0) !important;
+    border: none !important;
+  }
